add documentation using swagger and modify readme
- add decorators in DTOs, entities and controllers
- create file swagger.json in /docs from main.ts
- add workflow to execute CI
- add more information in readme.md
- add setting file .eslintrc

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-PORT=
-WHITE_LIST=
-MONGO_URI=
-JWT_SECRET=
-JWT_EXPIRES=
+PORT=3000
+WHITE_LIST=http://localhost:8000
+MONGO_URI=mongodb://localhost:27017/db-tech-posts
+JWT_SECRET=X8dCy9qBKjxGudSVGytE65u23jL
+JWT_EXPIRES=60m
